--- a/css/text.css
+++ b/css/text.css
@@ -64,3 +64,18 @@
 .bear-tebol {
 	font-weight: bolder;
 }
+
+/* Color */
+
+.bear-tecolor-0{color: #ffffff}
+.bear-tecolor-5{color: #fafafa}
+.bear-tecolor-10{color: #f5f5f5}
+.bear-tecolor-20{color: #eeeeee}
+.bear-tecolor-30{color: #e0e0e0}
+.bear-tecolor-40{color: #bdbdbd}
+.bear-tecolor-50{color: #9e9e9e}
+.bear-tecolor-60{color: #757575}
+.bear-tecolor-70{color: #616161}
+.bear-tecolor-80{color: #424242}
+.bear-tecolor-90{color: #212121}
+.bear-tecolor-100{color: #000000}
