--- a/css/text.css
+++ b/css/text.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=EB+Garamond|PT+Mono|Roboto+Slab|Seymour+One|Source+Sans+Pro:300,400,700&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond|PT+Mono|Roboto+Slab|Exo+2:800|Source+Sans+Pro:300,400,700&subset=cyrillic');
 
 
 *[class^='bear-te']{
@@ -34,8 +34,9 @@
 	font-family: 'Source Sans Pro', sans-serif;
 }
 
-.bear-tedec {
-	font-family: 'Seymour One', sans-serif;
+.bear-tebla {
+	font-family: 'Exo 2', sans-serif;
+	font-weight: 800;
 }
 
 .bear-tesla {
