FONTS LOADER! O! MA! GAH!

--- a/css/base.sass
+++ b/css/base.sass
@@ -2,8 +2,8 @@
 
 @import "reset.sass"
 @import "grid.sass"
-// @import "text.sass"
+@import "text.sass"
 
 .debug
-	background-color: #ff0000
-	height: 30px
+	background-color: #ff0050
+	min-height: 50px
