--- a/css/_grid.sass
+++ b/css/_grid.sass
@@ -1,6 +1,64 @@
 // Kiselev Nikolay 2017
 
-@for $i from 1 through 12
-	@for $j from 1 through 12
-		.bear#{$i}of#{$j}
-			width: $i / $j * 100%
+.Beartainer
+	display: flex
+	@for $i from 1 through 12
+		@for $j from 1 through 12
+			&.Bear#{$i}of#{$j}
+				@if $i <= $j
+					width: $i / $j * 100%
+	&.Col
+		flex-direction: column
+		&.KeepCe
+			align-items: center
+		&.KeepLe
+			align-items: start
+		&.KeepRi
+			align-items: end
+		&.KeepBe
+			align-items: space-between
+		&.KeepAr
+			align-items: space-around
+		&.KeepMid
+			justify-content: center
+		&.KeepTop
+			justify-content: start
+		&.KeepBot
+			justify-content: end
+		&.KeepBet
+			justify-content: space-between
+		&.KeepAro
+			justify-content: space-around
+	&.Row
+		flex-direction: row
+		&.KeepCe
+			justify-content: center
+		&.KeepLe
+			justify-content: start
+		&.KeepRi
+			justify-content: end
+		&.KeepBe
+			justify-content: space-between
+		&.KeepAr
+			justify-content: space-around
+		&.KeepMid
+			align-items: center
+		&.KeepTop
+			align-items: start
+		&.KeepBot
+			align-items: end
+		&.KeepBet
+			align-items: space-between
+		&.KeepAro
+			align-items: space-around
+
+	&.KeepConteMid
+		align-content: center
+	&.KeepConteTop
+		align-content: start
+	&.KeepConteBot
+		align-content: end
+	&.KeepConteBet
+		align-content: space-between
+	&.KeepConteAro
+		align-content: space-around
