--- a/css/base.sass
+++ b/css/base.sass
@@ -3,7 +3,8 @@
 @import "reset.sass"
 @import "grid.sass"
 @import "text.sass"
+@import "indents.sass"
+@import "colors.sass"
 
-.debug
-	background-color: #ff0050
-	min-height: 50px
+.Bearapper
+	margin: 0 17em
